# GBAHD-Shield

./: .gitignore  .gitmodules  GBAHD_Shield-cache.lib  GBAHD_Shield.kicad_pcb-bak  GBAHD_Shield.pro  README.md
.github/workflows/: atmega.yml  main.yml  update_bitstreams.yml
CPU_Flex_AGB/: CPU_Flex_AGB.kicad_pcb  CPU_Flex_AGB.kicad_prl  CPU_Flex_AGB.kicad_pro  CPU_Flex_AGB.kicad_sch
CPU_Flex_AGS/: CPU_Flex-cache.lib  CPU_Flex.kicad_pcb  CPU_Flex.kicad_prl  CPU_Flex.kicad_pro  CPU_Flex.kicad_sch  CPU_Flex.pro  CPU_Flex.sch  fp-info-cache
breakout/: GBABreakout.kicad_pcb-bak  GBABreakout.sch-bak
breakout/gerber/: GBABreakout-Edge_Cuts.gbr  GBABreakout-F_SilkS.gbr  GBABreakout-PTH.drl
breakout_GBASP/: GBABreakout.kicad_pcb  GBABreakout.kicad_pcb-bak  GBABreakout.kicad_prl  GBABreakout.kicad_pro  GBABreakout.kicad_sch  GBABreakout.pro  GBABreakout.sch  GBABreakout.sch-bak
breakout_GBASP/gerber/: GBABreakout-B_Cu.gbr  GBABreakout-B_Mask.gbr  GBABreakout-B_Paste.gbr  GBABreakout-B_SilkS.gbr  GBABreakout-Edge_Cuts.gbr  GBABreakout-F_Cu.gbr  GBABreakout-F_Mask.gbr  GBABreakout-F_Paste.gbr  GBABreakout-F_SilkS.gbr  GBABreakout-NPTH.drl  GBABreakout-PTH.drl
breakout_OGBA/: GBABreakout-cache.lib  GBABreakout.kicad_pcb  GBABreakout.kicad_pro  GBABreakout.kicad_sch  GBABreakout.pro  fp-info-cache
breakout_OGBA/gerber/: GBABreakout-B_Cu.gbr  GBABreakout-B_Mask.gbr  GBABreakout-B_Paste.gbr  GBABreakout-B_SilkS.gbr  GBABreakout-F_Cu.gbr  GBABreakout-F_Mask.gbr  GBABreakout-F_Paste.gbr  GBABreakout-NPTH.drl
esp32/: CMakeLists.txt  Makefile  get_components.sh  sdkconfig
esp32/html/: index.html
esp32/main/: CMakeLists.txt  arduino_main.cpp  bitstream_handler.cpp  bitstream_handler.h  main.c  mega_handler.cpp  mega_handler.h  web_handler.cpp  web_handler.h  wifi_handler.cpp  wifi_handler.h
firmware/avr/: Makefile  avr.h  avr.ino  twiboot.hex
firmware/esp32/: CMakeLists.txt  README.md  sdkconfig
firmware/esp32/data/webpage/: bluetooth.html  gbaHD.css  index.html  ota.html  pico.min.css  serial.html  settings.html  update.html  wifi.template
firmware/esp32/main/: CMakeLists.txt  arduino_main.cpp  bitstream_handler.cpp  bitstream_handler.h  log_handler.cpp  log_handler.h  main.c  mega_handler.cpp  mega_handler.h  ota_handler.cpp  ota_handler.h  preferences_handler.cpp  preferences_handler.h  web_handler.cpp  web_handler.h  wifi_handler.cpp  wifi_handler.h
fw/: fw.h  fw.ino  shield.ino
gerber/: GBAHD_Shield-F_Mask.gbr  GBAHD_Shield-F_SilkS.gbr  GBAHD_Shield-PTH.drl
shield/: GBAHD_Shield-cache.lib  GBAHD_Shield-rescue.lib  GBAHD_Shield.kicad_pcb  GBAHD_Shield.kicad_prl  GBAHD_Shield.kicad_pro  GBAHD_Shield.kicad_sch  GBAHD_Shield.pro  GBAHD_Shield.sch  GBAHD_Shield.sch-bak  GBAHD_Shield_BOM.xlsx  GBAHD_Shield_panel.kicad_pcb  _autosave-GBAHD_Shield.kicad_pcb  fp-info-cache  sym-lib-table
shield/bom/: ibom.html
shield/gerber/: GBAHD_Shield-B_Cu.gbr  GBAHD_Shield-B_Mask.gbr  GBAHD_Shield-B_Paste.gbr  GBAHD_Shield-B_SilkS.gbr  (+8 more)
test/: README.md  test.ino
(+11 files in other folders)
